--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
-  "name": "syncasync",
-  "version": "1.0.0",
+  "name": "@bbars/sync",
+  "version": "1.0.2",
   "description": "Package provides Teleport -- a tool with promise-like methods used to deliver data (looks like a Promise that you resolve from the outside). Also, it provides Channel -- multi-version of Teleport with an async iterator implemented.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bbars/syncasync.git"
+    "url": "git+https://github.com/bbars/js-sync.git"
   },
   "keywords": [
     "async",
@@ -20,9 +20,9 @@
   "author": "Denis Borzenko (bars)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bbars/syncasync/issues"
+    "url": "https://github.com/bbars/js-sync/issues"
   },
-  "homepage": "https://github.com/bbars/syncasync#readme",
+  "homepage": "https://github.com/bbars/js-sync#readme",
   "devDependencies": {
     "mocha": "^9.2.0"
   }
