--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "type": "module",
   "name": "@bbars/sync",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Package provides Teleport -- a tool with promise-like methods used to deliver data (looks like a Promise that you resolve from the outside). Also, it provides Channel -- multi-version of Teleport with an async iterator implemented.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./*.test.js"
+    "test": "mocha --trace-warnings ./*.test.js"
   },
   "repository": {
     "type": "git",
